fix help icon in new settings modal and tweak spacing below video thumbnails. #8979

--- a/openscholar/themes/os_basetheme/css/global.base.css
+++ b/openscholar/themes/os_basetheme/css/global.base.css
@@ -363,6 +363,7 @@ p {
 #columns p:last-child {
     margin: 0 0px .4em;
 }
+#content-column .block-boxes-os_boxes_columns .sv-list-video.sv-list-view-teaser img, 
 span.os-cvlinkwrap {
     margin-bottom: 0;
 }
